v2.6.5.2 - Upgraded to latest ffmpeg, libx264.
	 - Fixed swing looping in short movie files.
v2.6.5.1 - Fixed subtitles displaying in black only.
	 - Made grease pencil a property of the image instead of the viewer.
	 - Grease pencil drawings are saved and loaded to/from a reel.
	 - Grease pencil drawings are synced over TCP/IP on connection.
	 - GL Snapshot now can save a sequence of frames.
	 - Added The Color Transformation Language manual ( CtlManual.pdf )
	   to the docs folder.
	 - Made exr loader a tiny bit faster when it is a multiview image.
	 - Bug fixed a minor memory leak when quitting in color channel string.
	 - EDL timeline now supports play and step hotkeys.
	 - Fixed EXR loader not loading exif attributes.
	 - Fixed EXR saver to save all known attributes of image, except tiling.
	 - Added a Cut tool to EDL Window.  Allows cutting of clips, to later
	   delete them or move them somewhere else.
	 - Added Merge tool to undo the Cut tool.
	 - Fixed name of zlib1.dll in windows32 distributions.
v2.6.5.0 - Simplified and sped up exr loader.
	 - Fixed crash of exr loader when working with an image with a single
	   view.
	 - Added 3D View to evaluate deep scanline and deep tile image.
	 - EXR loader now supports deep tile images. 
	 - Bug fixed ILM format of image sequences ( beauty.1-24.exr )
v2.6.4.4 - Sped up reading of image files (specially the first of a sequence).
	 - Bug fixed OpenEXR stereo crossed not respecting dataWindows 
	   correctly.
	 - Bug fixed Single Instance to load images that are fed thru another
	   instance of viewer.
v2.6.4.3 - Updated all platforms to OpenEXR 2.2.
v2.6.4.2 - Added missing ctl and shaders directory to win64 release.
	 - Added missing rails directory to win64 release.
	 - Added HISTORY.txt and Videos.txt to win64 release.
	 - Added docs to win64 release.
	 - Restored glDrawPixels opengl drawing albeit buggy but needed for
	   old gfx cards.
	 - Updated version from v2.6.4.0.