@@ -20,7 +20,7 @@
 
 
 <div style="text-align: center;">
-<h3>Version 2.6.5.1</h3>
+<h3>Version 2.6.5.2</h3>
 
 
 
